# mcp-manager

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: README.md  core-concepts.md  getting-started.md
mcp_manager/: cli.py  dependency_checker.py  list_servers.py  server_registry.py
mcp_manager/tests/: test_cli.py
mcp_manager/tests/__snapshots__/: test_cli.ambr
